--- a/index.html
+++ b/index.html
@@ -57,71 +57,34 @@ if ('OTPCredential' in window) {
 &lt;/script&gt;
     </code></pre>
     <script>
-      // if ("OTPCredential" in window) {
-      //   window.addEventListener("DOMContentLoaded", (e) => {
-      //     alert("dom loaded");
-      //     const input = document.querySelector(
-      //       'input[autocomplete="one-time-code"]'
-      //     );
-      //     if (!input) return;
-      //     const ac = new AbortController();
-      //     const form = input.closest("form");
-      //     if (form) {
-      //       form.addEventListener("submit", (e) => {
-      //         ac.abort();
-      //       });
-      //     }
-      //     navigator.credentials
-      //       .get({
-      //         otp: { transport: ["sms"] },
-      //         signal: ac.signal,
-      //       })
-      //       .then((otp) => {
-      //         alert("otp");
-      //         input.value = otp.code;
-      //         if (form) form.submit();
-      //       })
-      //       .catch((err) => {
-      //         alert(err);
-      //         console.log(err);
-      //       })
-      //       .finally(() => {
-      //         input.value = 4444;
-      //       });
-      //   });
-      // }
-
-      const signal = new AbortController();
-      setTimeout(() => {
-        signal.abort();
-      }, 1 * 60 * 1000);
-      async function main() {
-        if ("OTPCredential" in window) {
-          try {
-            if (navigator.credentials) {
-              try {
-                await navigator.credentials
-                  .get({ abort: signal, otp: { transport: ["sms"] } })
-                  .then((content) => {
-                    document.getElementById("test").innerText = "in then block";
-                    if (content && content.code) {
-                      alert(content);
-                      document.getElementById("test").innerText = "done";
-                    }
-                  })
-                  .catch((e) => console.log(e));
-                document.getElementById("test").innerText = "not done";
-              } catch (e) {
-                return;
-              }
-            }
-          } catch (err) {
-            console.log(err);
-            document.getElementById("test").innerText = "unknown";
+      if ("OTPCredential" in window) {
+        console.log('flow is here');
+        window.addEventListener("DOMContentLoaded", (e) => {
+          const input = document.querySelector(
+            'input[autocomplete="one-time-code"]'
+          );
+          if (!input) return;
+          const ac = new AbortController();
+          const form = input.closest("form");
+          if (form) {
+            form.addEventListener("submit", (e) => {
+              ac.abort();
+            });
           }
-        }
+          navigator.credentials
+            .get({
+              otp: { transport: ["sms"] },
+              signal: ac.signal,
+            })
+            .then((otp) => {
+              input.value = otp.code;
+              if (form) form.submit();
+            })
+            .catch((err) => {
+              console.log(err);
+            });
+        });
       }
-      main();
     </script>
   </body>
 </html>
