--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@ if ('OTPCredential' in window) {
           );
           if (!input) return;
           const ac = new AbortController();
+          console.log(ac);
           const form = input.closest("form");
           if (form) {
             form.addEventListener("submit", (e) => {
@@ -77,8 +78,8 @@ if ('OTPCredential' in window) {
               signal: ac.signal,
             })
             .then((otp) => {
-              input.value = otp.code;
-              if (form) form.submit();
+              input.value = 1234;
+              // if (form) form.submit();
             })
             .catch((err) => {
               console.log(err);
